# data-visualization

./: .gitattributes  .gitignore  README.md
T0/: exploring.ipynb  homicides.csv
T1/: T1.md  exploring.ipynb  requirements.txt  task1.ipynb
T2/: .gitattributes  exploring.ipynb  oi.md  pyproject.toml
T2/data/raw/: table_1_county_trends_estimates.parquet
T3/: pyproject.toml
T3/data/interim/: data_final.parquet
T3/data/raw/: data_municipios.parquet  data_policia.parquet  data_violencia_mortes.parquet  notes.md
T3/notebooks/: data_municipios.parquet  oi.ipynb  transforming_data.ipynb
T3/src/: reading_data.py
