[project]
name = "t2-datavis"
version = "0.1.0"
description = ""
authors = [
    {name = "ddanieldma"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.extras]
filter-repo = ["git-filter-repo"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
