[project]
name = "t3"
version = "0.1.0"
description = "Third task in data visualization course"
authors = [
    {name = "ddanieldma"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
